--- a/NRP/src/app/app.component.css
+++ b/NRP/src/app/app.component.css
@@ -1,18 +1,62 @@
-/*Logo*/
-
+/*Estilos cabecera*/
 #header {
   width: 100%;
-  min-height: 100px;
-  background-color: #ccc;
+  min-height: 110px;
+  background-color: rgba(233, 224, 224, 0.9);
 }
 
+/*Estilos logo*/
 #logo img {
-  background-color: white;
+  float: left;
   width: 90px;
   height: 90px;
-  margin-top: 10px;
+  margin-top: 5px;
   margin-left: 105px;
   margin-bottom: 5px;
-  padding: 10px;
+  padding: 8px;
+  cursor: pointer;
+  transition: 600ms;
+}
+
+#logo img:hover {
+  transform: scale(0.8, 0.8);
+}
+
+/*Estilos menu*/
+#menu ul {
+  margin-left: 70%;
+}
+
+#menu ul li {
+  font-size: 17px;
+  font-family: Arial, Helvetica, sans-serif;
+  display: inline-block;
+  margin: 25px 20px 0px 20px;
+
+  background-color: rgb(252, 159, 159);
+  letter-spacing: 1px;
+  padding: 18px;
+  border: 1px solid black;
   border-radius: 40px;
+  transition: all 300ms;
+}
+
+#menu ul li:hover {
+  background-color: rgb(241, 95, 95);
+}
+
+#menu ul li a {
+  display: block;
+  color: black;
+  text-decoration: none;
+  transition: all 300ms;
+}
+
+#menu ul li:hover a {
+  transform: scale(1.2, 1.2);
+}
+
+.clearfix {
+  float: none;
+  clear: both;
 }
