--- a/NRP/src/app/app.component.html
+++ b/NRP/src/app/app.component.html
@@ -10,6 +10,9 @@
       <div id="logo">
         <a href="#"><img src="../assets/calendar.png" alt="Logo" /></a>
       </div>
+      <div id="titulo">
+        <h1>Gestione los requisitos de su proyecto con NRP</h1>
+      </div>
       <nav id="menu">
         <ul>
           <li>
