--- a/NRP/src/app/app.component.css
+++ b/NRP/src/app/app.component.css
@@ -1,62 +1,75 @@
-/*Estilos cabecera*/
-#header {
-  width: 100%;
-  min-height: 110px;
-  background-color: rgba(233, 224, 224, 0.9);
-}
-
-/*Estilos logo*/
-#logo img {
-  float: left;
-  width: 90px;
-  height: 90px;
-  margin-top: 5px;
-  margin-left: 105px;
-  margin-bottom: 5px;
-  padding: 8px;
-  cursor: pointer;
-  transition: 600ms;
-}
-
-#logo img:hover {
-  transform: scale(0.8, 0.8);
-}
-
-/*Estilos menu*/
-#menu ul {
-  margin-left: 70%;
-}
-
-#menu ul li {
-  font-size: 17px;
-  font-family: Arial, Helvetica, sans-serif;
-  display: inline-block;
-  margin: 25px 20px 0px 20px;
-
-  background-color: rgb(252, 159, 159);
-  letter-spacing: 1px;
-  padding: 18px;
-  border: 1px solid black;
-  border-radius: 40px;
-  transition: all 300ms;
-}
-
-#menu ul li:hover {
-  background-color: rgb(241, 95, 95);
-}
-
-#menu ul li a {
-  display: block;
-  color: black;
-  text-decoration: none;
-  transition: all 300ms;
-}
-
-#menu ul li:hover a {
-  transform: scale(1.2, 1.2);
-}
-
 .clearfix {
   float: none;
   clear: both;
+}
+
+/*Estilos cabecera*/
+#header {
+  width: 100%;
+  min-height: 100px;
+}
+
+/*Estilos logo*/
+#logo {
+  width: 50%;
+  margin: 0px auto;
+  text-align: center;
+}
+#logo img {
+  width: 110px;
+  height: 110px;
+  margin-top: 30px;
+  margin-right: 70px;
+  transition: all 1s;
+}
+
+#logo img:hover {
+  transform: scale(1.2, 1.2);
+}
+
+/*Estilos titulo*/
+
+#titulo {
+  width: 75%;
+  text-align: center;
+  margin: 0px auto;
+  margin-bottom: 30px;
+}
+
+#titulo h1 {
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  font-size: 35px;
+  background-color: rgb(187, 244, 248);
+  padding: 5px;
+  margin-top: 30px;
+  margin-right: 30px;
+  border-radius: 50px;
+}
+
+/*Estilos menu*/
+#menu {
+  margin: 0px auto;
+  text-align: center;
+}
+
+#menu ul {
+  margin-right: 60px;
+}
+
+#menu ul li {
+  display: inline-block;
+  list-style: none;
+  margin: 0px 20px 0px 20px;
+}
+
+#menu ul li a {
+  font-size: 25px;
+  color: black;
+  display: block;
+  text-decoration: none;
+  transition: 400ms;
+}
+
+#menu ul li a:hover {
+  opacity: 0.5;
 }
