--- a/NRP/src/app/components/clientes/clientes.component.html
+++ b/NRP/src/app/components/clientes/clientes.component.html
@@ -1,1 +1,14 @@
-<p>clientes works!</p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+  </head>
+  <body>
+    <div id="wrap">
+      <div id="z-titulo">
+        <h1>Clientes</h1>
+      </div>
+      <a href="#" id="botonC" class="boton">Añadir cliente</a>
+    </div>
+  </body>
+</html>
