--- a/NRP/src/app/app.component.css
+++ b/NRP/src/app/app.component.css
@@ -43,6 +43,7 @@
   padding: 5px;
   margin-top: 30px;
   margin-right: 30px;
+  border: 1px solid black;
   border-radius: 50px;
 }
 
@@ -63,6 +64,7 @@
 }
 
 #menu ul li a {
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
   font-size: 25px;
   color: black;
   display: block;
@@ -71,5 +73,9 @@
 }
 
 #menu ul li a:hover {
+  opacity: 0.5;
+}
+
+.actived {
   opacity: 0.5;
 }
