--- a/NRP/src/app/components/login/login.component.html
+++ b/NRP/src/app/components/login/login.component.html
@@ -27,7 +27,7 @@
                                     </div>
 
                                     <div class="text-center pt-1 mb-5 pb-1">
-                                        <button class="btn btn-primary btn-block fa-lg gradient-custom-2 mb-3" type="button">Log in</button>
+                                        <button id="botonLogin" class="btn btn-primary btn-block fa-lg gradient-custom-2 mb-3" type="button">Iniciar sesión</button>
                                         <a class="text-muted" href="#!">¿Ha olvidado la contraseña?</a>
                                     </div>
 
