--- a/NRP/src/app/components/login/login.component.html
+++ b/NRP/src/app/components/login/login.component.html
@@ -33,7 +33,7 @@
 
                                     <div class="d-flex align-items-center justify-content-center pb-4">
                                         <p class="mb-0 me-2">Registrarse</p>
-                                        <button type="button" class="btn btn-outline-danger">Registrarse</button>
+                                        <a [routerLink]="['/registro']" routerLinkActive="router-link-active"><button type="button" class="btn btn-outline-danger">Registrarse</button></a>
                                     </div>
 
                                 </form>
