--- a/NRP/src/app/components/login/login.component.html
+++ b/NRP/src/app/components/login/login.component.html
@@ -28,12 +28,11 @@
 
                                     <div class="text-center pt-1 mb-5 pb-1">
                                         <button id="botonLogin" class="btn btn-primary btn-block fa-lg gradient-custom-2 mb-3" type="button">Iniciar sesión</button>
-                                        <a class="text-muted" href="#!">¿Ha olvidado la contraseña?</a>
                                     </div>
 
                                     <div class="d-flex align-items-center justify-content-center pb-4">
-                                        <p class="mb-0 me-2">Registrarse</p>
-                                        <a [routerLink]="['/registro']" routerLinkActive="router-link-active"><button type="button" class="btn btn-outline-danger">Registrarse</button></a>
+
+                                        <a [routerLink]="['/registro']" routerLinkActive="router-link-active">¿No tienes cuenta? Registrate </a>
                                     </div>
 
                                 </form>
