--- a/NRP/src/app/components/registro/registro.component.css
+++ b/NRP/src/app/components/registro/registro.component.css
@@ -1,10 +1,10 @@
 .gradient-custom {
     /* fallback for old browsers */
-    background: #f093fb;
+    background: #fccb90;
     /* Chrome 10-25, Safari 5.1-6 */
-    background: -webkit-linear-gradient(to bottom right, rgba(240, 147, 251, 1), rgba(245, 87, 108, 1));
+    background: -webkit-linear-gradient(to right, #ee7724, #d8363a, #dd3675, #b44593);
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    background: linear-gradient(to bottom right, rgba(240, 147, 251, 1), rgba(245, 87, 108, 1))
+    background: linear-gradient(to right, #ee7724, #d8363a, #dd3675, #b44593);
 }
 
 .card-registration .select-input.form-control[readonly]:not([disabled]) {
@@ -14,6 +14,36 @@
     padding-right: .75em;
 }
 
+.form-label {
+    text-align: center;
+}
+
+.mb-md-5 {
+    text-align: center;
+}
+
 .card-registration .select-arrow {
     top: 13px;
+}
+
+.boton {
+    justify-content: center;
+}
+
+@media (min-width: 768px) {
+    .gradient-custom {
+        height: 100vh !important;
+    }
+}
+
+.pt-2 {
+    justify-content: center;
+    display: flex;
+}
+
+@media (min-width: 769px) {
+    .gradient-custom {
+        border-top-right-radius: .3rem;
+        border-bottom-right-radius: .3rem;
+    }
 }
