--- a/NRP/src/app/components/registro/registro.component.css
+++ b/NRP/src/app/components/registro/registro.component.css
@@ -1,49 +1,34 @@
-.gradient-custom {
-    /* fallback for old browsers */
-    background: #fccb90;
-    /* Chrome 10-25, Safari 5.1-6 */
-    background: -webkit-linear-gradient(to right, #ee7724, #d8363a, #dd3675, #b44593);
-    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    background: linear-gradient(to right, #ee7724, #d8363a, #dd3675, #b44593);
+html,
+body {
+  height: 100%;
 }
 
-.card-registration .select-input.form-control[readonly]:not([disabled]) {
-    font-size: 1rem;
-    line-height: 2.15;
-    padding-left: .75em;
-    padding-right: .75em;
+body {
+  display: flex;
+  align-items: center;
+  padding-top: 40px;
+  padding-bottom: 40px;
 }
 
-.form-label {
-    text-align: center;
+.form-signin {
+  width: 100%;
+  max-width: 330px;
+  padding: 15px;
+  margin: auto;
 }
 
-.mb-md-5 {
-    text-align: center;
+.form-signin .checkbox {
+  font-weight: 400;
 }
 
-.card-registration .select-arrow {
-    top: 13px;
+.form-signin .form-floating:focus-within {
+  z-index: 2;
 }
 
-.boton {
-    justify-content: center;
+.form-signin input[type="email"] {
+  margin-bottom: -1px;
 }
 
-@media (min-width: 768px) {
-    .gradient-custom {
-        height: 100vh !important;
-    }
-}
-
-.pt-2 {
-    justify-content: center;
-    display: flex;
-}
-
-@media (min-width: 769px) {
-    .gradient-custom {
-        border-top-right-radius: .3rem;
-        border-bottom-right-radius: .3rem;
-    }
+.form-signin input[type="password"] {
+  margin-bottom: 10px;
 }
