--- a/NRP/src/app/components/registro/registro.component.html
+++ b/NRP/src/app/components/registro/registro.component.html
@@ -113,6 +113,7 @@
           </label>
         </div>
         <button
+          [routerLink]="['/login']"
           class="w-100 btn btn-lg btn-primary"
           type="submit"
           [disabled]="!formRegistro.form.valid"
