--- a/NRP/src/app/components/inicio/inicio.component.html
+++ b/NRP/src/app/components/inicio/inicio.component.html
@@ -28,7 +28,7 @@
                             Configuración
                         </a>
                         <ul class="dropdown-menu">
-                            <li> <a id="itemsMenu" class="dropdown-item" href="#"> Cambiar contraseña</a></li>
+                            <li> <a id="itemsMenu" class="dropdown-item" [routerLink]="['/registro']"> Cambiar contraseña</a></li>
                             <li> <a id="itemsMenu" class="dropdown-item" href="#"> Cerrar sesión</a></li>
                         </ul>
                     </ul>
