--- a/NRP/src/app/components/inicio/inicio.component.html
+++ b/NRP/src/app/components/inicio/inicio.component.html
@@ -29,7 +29,7 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li> <a id="itemsMenu" class="dropdown-item" [routerLink]="['/registro']"> Cambiar contraseña</a></li>
-                            <li> <a id="itemsMenu" class="dropdown-item" href="#"> Cerrar sesión</a></li>
+                            <li> <a id="itemsMenu" class="dropdown-item" [routerLink]="['/login']"> Cerrar sesión</a></li>
                         </ul>
                     </ul>
                 </div>
