--- a/NRP/src/app/components/inicio/inicio.component.html
+++ b/NRP/src/app/components/inicio/inicio.component.html
@@ -24,7 +24,7 @@
                         <li id="itemsMenu" class="nav-item"><a class="nav-link" href="#">Item 2</a></li>
                         <li id="itemsMenu" class="nav-item"><a class="nav-link" href="#">Item 3</a></li>
                         <li id="itemsMenu" class="nav-item"><a class="nav-link" href="#">Item 4</a></li>
-                        <a id="itemsMenu" class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
+                        <a id="itemsMenu" class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown">
                             Configuración
                         </a>
                         <ul class="dropdown-menu">
