--- a/NRP/src/app/components/inicio/inicio.component.html
+++ b/NRP/src/app/components/inicio/inicio.component.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Pagína inicio del equipo 1</title>
+    <title>Pagina cliente principal</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -10,65 +10,59 @@
 </head>
 
 <body>
+
     <!-- menu de navegación-->
+    <!--
     <div class="container-fluid">
         <nav class="navbar navbar-expand-md navbar-dark bg-primary border rounded border-dark">
             <div class="container-fluid">
                 <a routerLink]="['/inicio']" class="navbar-brand">Inicio</a>
-                <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#MenuNavegacion">
+                <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-toggle="dropdown" data-bs-target="#MenuNavegacion">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div id="MenuNavegación" class="collapse navbar-collapse">
-                    <ul class="navbar-nav ms-3">
-                        <li id="itemsMenu" class="nav-item"><a class="nav-link" href="#">Item 1</a></li>
-                        <a id="itemsMenu" class="nav-link dropdown-toggle navbar-right" role="button" data-bs-toggle="dropdown">Configuración</a>
-                        <ul class="dropdown-menu ">
-                            <li> <a id="itemsMenu" class="dropdown-item" [routerLink]="['/registro']"> Cambiar contraseña</a></li>
-                            <li> <a id="itemsMenu" class="dropdown-item" [routerLink]="['/login']"> Cerrar sesión</a></li>
+                <div id="MenuNavegación" class="collapse navbar-collapse ms-auto">
+                    <ul id="MenuNavegacion" class="navbar-nav ms-auto">
+                        <li id="MenuNavegacion" class="nav-item ms-auto"> <a class="nav-link" href="#">Item 1</a> </li>
+                        <a class="nav-link dropdown-toggle ms-auto" role="button" data-bs-toggle="dropdown">Configuración</a>
+                        <ul class="dropdown-menu ms-auto">
+                            <li> <a class="dropdown-item ms-auto" style="background-color: burlywood;" [routerLink]="['/registro']"> Cambiar contraseña</a></li>
+                            <li> <a class="dropdown-item ms-auto" style="background-color: burlywood;" [routerLink]="['/login']"> Cerrar sesión</a></li>
                         </ul>
                     </ul>
                 </div>
             </div>
         </nav>
     </div>
+    -->
+    <div class="container-fluid">
+        <!-- BARRA NAVEGACIÓN -->
+        <div class="bg-light">
+            <nav class="navbar navbar-expand-md navbar-dark bg-primary border-1 rounder border-dark">
+                <div class="container-fluid">
+                    <a routerLink]="['/inicio']" class="navbar-brand">Inicio</a>
+                    <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#MenuNavegacion">
+                            <span class="navbar-toggler-icon"></span>
+                    </button>
+                </div>
 
-
-    <!--
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Inicio</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-            <div class="collapse navbar-collapse" id="collapsibleNavbar">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Proyectos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Tareas</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Configuración</a>
-                        <ul class="dropdown-menu">
-                            <li><a href="http://localhost:57318/registro" class=" dropdown-item ">Modificar perfil</a></li>
-                            <li><a href="http://localhost:57318/login" class=" dropdown-item ">Desconectarse</a>
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
+                <div id="MenuNavegacion" class="collapse navbar-collapse">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Item</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown"> Opciones </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item mb-3" routerLink]="['/registro']">Modificar perfil</a></li>
+                                <li><a class="dropdown-item mb-3" routerLink]="['/login']">Cerrar sesión</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
         </div>
-    </nav>
-    
--->
-    <div class="container-fluid mt-3 ">
-        <h3>Navbar With Dropdown</h3>
-        <p>This example adds a dropdown menu in the navbar.</p>
-    </div>
+
+
 
 </body>
 
