mejorando la barra de inicio

--- a/NRP/src/app/components/inicio/inicio.component.html
+++ b/NRP/src/app/components/inicio/inicio.component.html
@@ -28,7 +28,7 @@
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown"> Opciones </a>
-                            <ul class="dropdown-menu">
+                            <ul class="dropdown-menu dropdown-menu-dark dropdown-menu-lg-end">
                                 <li><a class="dropdown-item mb-3" routerLink]="['/registro']">Modificar perfil</a></li>
                                 <li><a class="dropdown-item mb-3" routerLink]="['/login']">Cerrar sesión</a></li>
                             </ul>
