--- a/NRP/src/app/components/login/login.component.html
+++ b/NRP/src/app/components/login/login.component.html
@@ -1,62 +1,91 @@
 <!DOCTYPE html>
 <html lang="es">
-
-<head>
+  <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="" />
 
-    <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/sign-in/" />
+    <link
+      rel="canonical"
+      href="https://getbootstrap.com/docs/5.1/examples/sign-in/"
+    />
 
     <!-- Bootstrap core CSS -->
     <link href="login.component.css" rel="stylesheet" />
 
     <style>
-        .bd-placeholder-img {
-            font-size: 1.125rem;
-            text-anchor: middle;
-            -webkit-user-select: none;
-            -moz-user-select: none;
-            user-select: none;
+      .bd-placeholder-img {
+        font-size: 1.125rem;
+        text-anchor: middle;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        user-select: none;
+      }
+
+      @media (min-width: 768px) {
+        .bd-placeholder-img-lg {
+          font-size: 3.5rem;
         }
-        
-        @media (min-width: 768px) {
-            .bd-placeholder-img-lg {
-                font-size: 3.5rem;
-            }
-        }
+      }
     </style>
 
     <!-- Custom styles for this template -->
     <link href="login.component.css" rel="stylesheet" />
-</head>
+  </head>
 
-<body class="text-center">
+  <body class="text-center">
     <main class="form-signin">
-        <form>
-            <img class="mb-4 border-radius rounded-circle" src="./assets/logo.jpg" alt="Logo" width="200" height="200" />
-            <h1 class="h3 mb-3 fw-normal">Iniciar sesión</h1>
+      <form #formLogin="ngForm" (ngSubmit)="login()">
+        <img
+          class="mb-4 border-radius rounded-circle"
+          src="./assets/logo.jpg"
+          alt="Logo"
+          S
+          width="200"
+          height="200"
+        />
+        <h1 class="h3 mb-3 fw-normal">Iniciar sesión</h1>
 
-            <div class="form-floating">
-                <input type="name" class="form-control" id="floatingInput" placeholder="jm890" />
-                <label for="floatingInput">Nombre usuario</label>
-            </div>
-            <div class="form-floating mt-3">
-                <input type="password" class="form-control" id="floatingPassword" placeholder="Password" />
-                <label for="floatingPassword">Contraseña</label>
-            </div>
+        <div class="form-floating">
+          <input
+            type="name"
+            class="form-control"
+            id="floatingInput"
+            name="nombre"
+            #nombre="ngModel"
+            [(ngModel)]="usuario.nombre"
+            placeholder="Nombre usuario"
+          />
+          <label for="floatingInput">Nombre usuario</label>
+        </div>
+        <div class="form-floating mt-3">
+          <input
+            type="password"
+            class="form-control"
+            id="floatingPassword"
+            name="nombre"
+            #password="ngModel"
+            [(ngModel)]="usuario.password"
+            placeholder="Password"
+          />
+          <label for="floatingPassword">Contraseña</label>
+        </div>
 
-            <div class="checkbox mb-3">
-                <label>
+        <div class="checkbox mb-3">
+          <label>
             <a [routerLink]="['/registro']">¿No tienes cuenta? Registrate</a>
           </label>
-            </div>
-            <button [routerLink]="['/inicio']" class="w-100 btn btn-lg btn-primary" type="submit">
+        </div>
+        <button
+          (click)="login()"
+          [routerLink]="['/inicio']"
+          class="w-100 btn btn-lg btn-primary"
+          type="submit"
+        >
           Entrar
         </button>
-            <p class="mt-5 mb-3 text-muted">&copy; NRP–2021</p>
-        </form>
+        <p class="mt-5 mb-3 text-muted">&copy; NRP–2021</p>
+      </form>
     </main>
-</body>
-
+  </body>
 </html>
