--- a/NRP/src/app/components/inicio/inicio.component.html
+++ b/NRP/src/app/components/inicio/inicio.component.html
@@ -24,7 +24,7 @@
                 <div id="MenuNavegacion" class="collapse navbar-collapse">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Item</a>
+                            <a class="nav-link">Item</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown"> Opciones </a>
@@ -38,6 +38,11 @@
             </nav>
         </div>
     </div>
+
+    <!-- Fin de la barra de navegación-->
+
+    <h3 id="titulo" style="margin-left: 1rem; margin-top: 1rem;"> Proyectos </h3>
+
 </body>
 
 </html>
