mejoras en el codigo y la legibilidad

--- a/NRP/src/app/components/inicio/inicio.component.html
+++ b/NRP/src/app/components/inicio/inicio.component.html
@@ -42,11 +42,11 @@
 
     <!-- Fin de la barra de navegación-->
 
+    <!-- Titulo de la vista-->
     <h3 id="titulo" style="margin-left: 1rem; margin-top: 1rem;"> Proyectos </h3>
 
-    <div id="proyectos">
-        <span> prueba </span>
-    </div>
+    <!-- Contenido de la vista-->
+    <div id="proyectos" style="margin-left: 1rem; margin-top: 1rem"><span> prueba </span></div>
 
 </body>
 
