--- a/NRP/src/app/components/requisito/requisito.component.html
+++ b/NRP/src/app/components/requisito/requisito.component.html
@@ -41,7 +41,10 @@
 
     <!-- Fin de la barra de navegación-->
 
+    <!-- Titulo de la vista-->
     <h3 style="margin-top: 1rem; margin-left: 1rem;">Tareas del proyecto - "nombre"</h3>
+
+    <!-- Contenido de la vista-->
 
 
 </body>
