--- a/NRP/src/app/components/descripcion-tarea-cliente/descripcion-tarea-cliente.component.html
+++ b/NRP/src/app/components/descripcion-tarea-cliente/descripcion-tarea-cliente.component.html
@@ -47,7 +47,7 @@
     <!-- Contenido de la vista-->
 
     <div id="descripcionRequisito">
-        <h5> Descripcion </h5>
+        <h5 id="titulo"> Descripcion </h5>
         <span> Aqui va la descripcion del requisito</span>
     </div>
 
