--- a/NRP/src/app/components/descripcion-tarea-cliente/descripcion-tarea-cliente.component.css
+++ b/NRP/src/app/components/descripcion-tarea-cliente/descripcion-tarea-cliente.component.css
@@ -1,8 +1,4 @@
 #descripcionRequisito {
-    align-items: center;
-    color: blue;
-}
-
-#titulo {
-    colo: blue;
+  align-items: center;
+  color: green;
 }
