--- a/NRP/src/app/components/inicio/inicio.component.html
+++ b/NRP/src/app/components/inicio/inicio.component.html
@@ -16,6 +16,8 @@
   </head>
 
   <body>
+    <h1>{{ usuario.nombre }}</h1>
+    <h1>{{ usuario.token }}</h1>
     <div class="container-fluid">
       <!-- BARRA NAVEGACIÓN -->
       <div class="bg-light">
