--- a/NRP/src/app/components/inicio/inicio.component.html
+++ b/NRP/src/app/components/inicio/inicio.component.html
@@ -57,7 +57,16 @@
       <!--Fin del menu-->
       <!--Inicio del contenido de INICIO-->
       <div class="row">
-        <h1 class="text-black mt-3 ms-4">Proyectos</h1>
+        <div class="col-12">
+          <h1 class="text-black mt-3 ms-4">Proyectos</h1>
+          <ul class="list-group list-group-flush ms-3">
+            <li class="list-group-item">Proyecto 1</li>
+            <li class="list-group-item">Proyecto 2</li>
+            <li class="list-group-item">Proyecto 3</li>
+            <li class="list-group-item">Proyecto 4</li>
+            <li class="list-group-item">Proyecto 5</li>
+          </ul>
+        </div>
       </div>
       <!--Fin del contenido de INICIO-->
     </div>
